[gd_scene load_steps=2 format=3 uid="uid://rrcbu6jjryr3"]

[ext_resource type="Script" path="res://gui/scenes/file_dialog_close.gd" id="1_saam0"]

[node name="FileDialogClose" type="FileDialog"]
initial_position = 2
size = Vector2i(800, 400)
visible = true
popup_window = true
ok_button_text = "Save"
dialog_hide_on_ok = true
access = 2
use_native_dialog = true
script = ExtResource("1_saam0")

[connection signal="canceled" from="." to="." method="_on_canceled"]
[connection signal="file_selected" from="." to="." method="_on_file_selected"]
